# crm

./: Cargo.toml  README.md  cliff.toml  deny.toml  doc.md
.github/workflows/: build.yml
crm/: Cargo.toml  build.rs
crm-common/: Cargo.toml
crm-common/src/: lib.rs  mysql.rs
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  config.rs  lib.rs  server.rs
crm/src/abi/: crm.rs  mod.rs  user.rs
crm/src/pb/: crm.rs  mod.rs  user.rs
example/: Cargo.toml  build.rs
example/src/: lib.rs
example/src/pb/: items.rs  mod.rs
protos/crm/: rpc.proto  users.proto
protos/example/: items.proto
protos/metadata/: rpc.proto
protos/notification/: messages.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240729141802_init.sql  20240729155840_create_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
user-stat/tests/: service.rs
