[workspace]
members = ["crm", "example", "user-stat", "crm-metadata", "crm-send"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "fs",
    "io-util",
] }
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
prost-build = "0.13.1"
tonic-build = "0.12.1"
sqlx = { version = "0.8.0", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.200", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
