[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
nanoid = { version = "0.4.0" }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.30"
itertools = "0.13.0"
tokio-stream = "0.1.15"
rand = "0.8.5"
fake = { version = "2.9.2", features = ["derive", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
