[package]
name = "crm-send"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
test_utils = ["fake", "nanoid"]

[dependencies]
anyhow = { workspace = true }
nanoid = { version = "0.4.0", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.30"
itertools = "0.13.0"
tokio-stream = "0.1.15"
rand = "0.8.5"
fake = { version = "2.9.2", features = ["derive", "chrono"], optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
crm-metadata = { workspace = true }

[dev-dependencies]
crm-send = { workspace = true, features = ["test_utils"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
