[package]
name = "crm"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crm-server"
path = "src/server.rs"

[[bin]]
name = "crm-client"
path = "src/client.rs"

[dependencies]
anyhow = { workspace = true }
futures = "0.3.30"
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9.34"
tokio = { workspace = true }
tonic = { workspace = true }
user-stat = { workspace = true }
crm-send = { workspace = true }
crm-metadata = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
tokio-stream = "0.1.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
tonic-build = { workspace = true }
