[package]
name = "user-stat"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono"] }
nanoid = "0.4.0"
